<resources>

    <string name="app_name">Put.io</string>

    <!-- Short commands and responses -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="rename">Rename</string>
    <string name="add">Add</string>
    <string name="play">Play</string>
    <string name="menu_addtransfers">Add transfers</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_about">About</string>
    <string name="log_in">Log in</string>
    <string name="apply">Apply</string>
    <string name="download">Download</string>
    <string name="redownload">Re-download</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="browse">Browse</string>
    <string name="remove">Remove</string>

    <!-- Dialog text -->
    <string name="gettingstreamurltitle">Preparing to stream</string>
    <string name="gettingstreamurlbody">Just a second…</string>
    <string name="renametitle">Rename this file?</string>
    <string name="deletetitle">Delete this file?</string>
    <string name="deletebody">You can only get it back by adding it all over again.</string>
    <string name="removetransfertitle">Remove this transfer?</string>
    <string name="removetransferbody">The download will be cancelled.</string>
    <string name="downloadfinishedopentitle">Open file?</string>
    <string name="downloadfinishedsharetitle">Share file?</string>
    <string name="downloadfinishedbody">%1$s is done downloading.</string>
    <string name="redownloadtitle">Re-download file?</string>
    <string name="redownloadfordlbody">It looks like this has already been downloaded. Download it anyway?</string>
    <string name="redownloadforopenbody">It looks like this has already been downloaded. Do you want to open this copy or download it again?</string>
    <string name="sharetitle">It looks like this has already been downloaded. Download it anyway?</string>
    <string name="sharebody">It looks like this has already been downloaded. Do you want to open this copy or download it again?</string>
    <string name="addtransferstitle">Add transfers</string>
    <string name="applychangestitle">Apply changes?</string>

    <!-- Errors (for users) -->
    <string name="cantopenbecausefuckyou">There was an error opening the file.</string>
    <string name="cantopenbecausetype">None of your apps can open this type of file.</string>
    <string name="transferfailed">This transfer failed to download.</string>
    <string name="nothingenteredtofetch">Enter something to fetch first!</string>
    <string name="filetoobig">This file is too big! Are you sure it\'s a torrent?</string>
    <string name="nofilechosen">Browse for a file first!</string>
    <string name="streamerror">Sorry, there was an error streaming your video.</string>
    <string name="couldntconnect">Couldn\'t connect to Put.io. Are you online?</string>
    <string name="notatorrent">This doesn\'t seem to be a torrent file!</string>
    <string name="couldntgetdownloadlink">There was a problem getting the download link.</string>

    <!-- Other stuff -->
    <string name="account">Account</string>
    <string name="files">Files</string>
    <string name="transfers">Transfers</string>
    <string name="loginsuccess">Successfully logged in!</string>
    <string name="size_is">Size:</string>
    <string name="loading">Loading…</string>
    <string name="created">Created:</string>
    <string name="at">at</string>
    <string name="welcome">Welcome!</string>
    <string name="gotosite">Go to site</string>
    <string name="intro1">A different kind of online storage</string>
    <string name="intro2">Put.io works like any other storage service. Except, it can also retrieve and put files into your personal, private online space.</string>
    <string name="slogan1">ONLINE STORAGE</string>
    <string name="slogan2">RE-IMAGINED</string>
    <string name="applychanges">You have unsaved changes to %1$s.\nApply them?</string>
    <string name="tokenlogin">If, for whatever reason, you\'d like to provide your login token manually, you can do so here.</string>
    <string name="entertoken">Enter token</string>
    <string name="pasteurls">Paste URLs here</string>
    <string name="title_activity_swipe">Swipe</string>
    <string name="torrentadded">Torrent added to transfers!</string>
    <string name="extractwhenfinished">Extract when finished</string>
    <string name="searchyourfiles">Search your files</string>
    <string name="nofilesfound">No files were found.</string>
    <string name="filedeleted">File deleted!</string>
    <string name="transferremoved">Transfer removed!</string>
    <string name="hey">Hey!</string>
    <string name="readytopaste">The download link is ready to be pasted.</string>
    <string name="choosefile">Choose a file</string>
    <string name="cachesize">Cache size</string>
    <string name="cacheexplanation">How much space should be used for the cache?.\nThis won\'t affect your downloaded files.</string>

    <!-- About screen -->
    <string name="appbysteven">Android app by Steven Schoen.</string>
    <string name="codedwithlove">Coded with love, care, and caffeine.</string>
    <string name="notaffiliated">Not affiliated with Put.io.</string>

</resources>