<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_addtransfers"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/menu_addtransfers" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_logout" />
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/menu_about" />

</menu>