<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<LinearLayout
		android:id="@+id/tokenHolder"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/padding_large" >

		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tokenlogin"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<EditText
			android:id="@+id/editText1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:ems="10"
			android:hint="@string/entertoken" >

			<requestFocus />
		</EditText>
	</LinearLayout>

	<View
		android:layout_below="@id/tokenHolder"
		android:id="@+id/buttonbarSeparator"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@drawable/divider_horizontal" />

	<LinearLayout
		android:id="@+id/buttonbar"
		style="?android:attr/buttonBarStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/buttonbarSeparator"
		android:orientation="horizontal" >

		<Button
			android:id="@+id/button_tokenlogin_cancel"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/putio_clickable_bg"
			android:text="@string/cancel" />

		<Button
			android:id="@+id/button_tokenlogin_login"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/putio_clickable_bg"
			android:text="@string/log_in" />
	</LinearLayout>

</RelativeLayout>