<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<TextView
		android:id="@+id/text_confirmText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="@dimen/padding_large"
		android:text="@string/applychanges"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<View
		android:id="@+id/buttonbarSeparator"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_below="@+id/text_confirmText"
		android:layout_marginTop="@dimen/padding_large"
		android:background="@drawable/divider_horizontal" />

	<LinearLayout
		android:id="@+id/buttonbar"
		style="?android:attr/buttonBarStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/buttonbarSeparator"
		android:orientation="horizontal" >

		<Button
			android:id="@+id/button_confirm_cancel"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/putio_clickable_bg"
			android:text="@string/no" />

		<Button
			android:id="@+id/button_confirm_apply"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/putio_clickable_bg"
			android:text="@string/apply" />
	</LinearLayout>

</RelativeLayout>