<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical" >

	<include layout="@layout/dialog_title_putio" >
	</include>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<FrameLayout
			android:id="@+id/nameHolder"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:paddingBottom="@dimen/padding_medium"
			android:paddingLeft="@dimen/padding_large"
			android:paddingRight="@dimen/padding_large"
			android:paddingTop="@dimen/padding_medium" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/redownloadforopenbody" />
		</FrameLayout>

		<View
			android:id="@+id/buttonbarSeparator"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_below="@+id/nameHolder"
			android:layout_marginTop="@dimen/padding_large"
			android:background="@drawable/divider_horizontal" />

		<LinearLayout
			android:id="@+id/buttonbar"
			style="@style/Putio.ButtonBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@id/buttonbarSeparator"
			android:orientation="horizontal" >

			<Button
				android:id="@+id/button_redownloadforopen_cancel"
				style="@style/Putio.ButtonBar.Button"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/putio_clickable_bg"
				android:text="@string/cancel" />

			<Button
				android:id="@+id/button_redownloadforopen_download"
				style="@style/Putio.ButtonBar.Button"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/putio_clickable_bg"
				android:text="@string/redownload"
				android:textAppearance="?android:attr/textAppearanceSmallInverse" />

			<Button
				android:id="@+id/button_redownloadforopen_open"
				style="@style/Putio.ButtonBar.Button"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/putio_clickable_bg"
				android:text="@string/open" />
		</LinearLayout>
	</RelativeLayout>

</LinearLayout>