<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include layout="@layout/dialog_title_putio" >
    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/text_redownloadbody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_large" />

        <View
            android:id="@+id/buttonbarSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/text_redownloadbody"
            android:background="@drawable/divider_horizontal" />

        <LinearLayout
            android:id="@+id/buttonbar"
            style="@style/Putio.ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/buttonbarSeparator"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_redownload_cancel"
                style="@style/Putio.ButtonBar.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button_redownload_download"
                style="@style/Putio.ButtonBar.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/redownload"
                android:textAppearance="?android:attr/textAppearanceSmallInverse" />

            <Button
                android:id="@+id/button_redownload_open"
                style="@style/Putio.ButtonBar.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/open" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>